--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ appdirs==1.4.4
 asgiref==3.2.10
 distlib==0.3.1
 Django==3.1.2
+django-cors-headers==3.5.0
 django-filter==2.4.0
 djangorestframework==3.12.1
 filelock==3.0.12
